--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<br>
 		<nav class="topnav">
-			<a class="active" href="index.html">Home</a>
+		<a href="extra/second.html">Second Page</a>	
 		</nav>
 	</header>
 	<main class="spacing">
